Add .center class for figures in docs

--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -6,6 +6,11 @@
   background-color: white;
 }
 
+.figure.center {
+  display: block;
+  margin: 0 auto;
+}
+
 .termynal-comment {
   color: #4a968f;
   font-style: italic;
